--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
-recursive-include linaro_django_xmlrpc *
+include COPYING
+include COPYING.AGPL-3 
+include setup-dev-env.sh
+recursive-include linaro_django_xmlrpc/fixtures *.json
+recursive-include linaro_django_xmlrpc/templates *.html
